--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	 crossorigin="anonymous">
 	<title>Todo app</title>
 </head>
-<body>
+<body style="padding: 40px">
 	<div class="container">
 		<div class="card col-md-8 offset-md-2">
 			
