--- a/index.html
+++ b/index.html
@@ -41,27 +41,8 @@
 		</div>
 	</div>
 
-
+	<script src="uuidv4.min.js"></script>
 	<script src="todo-app-functions.js"></script>
 	<script src="todo-app.js"></script>
 </body>
 </html>
-
-
-<!--// <div class="todoRoot card">
-	// 	<div class="todoBody row card-body">
-
-	// 		<div class="col-xs-1 checkboxCol">
-	// 			<input type="checkbox">
-	// 		</div>
-
-	// 		<div class="col-xs-10 textCol">
-	// 			<span>todo text</span>
-	// 		</div>
-
-	// 		<div class="col-xs-1 btnCol">
-	// 			<button>X</button>
-	// 		</div>
-
-	// 	</div>
-	// </div> -->
